--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "swc-loader": "^0.2.3",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
